--- a/pages/index.html
+++ b/pages/index.html
@@ -19,14 +19,14 @@
     <div id="header">
 	<div><img src="images/cat.jpg" alt="Photo of Gully" id="headImg" /></div>
     	<div id="title">
-       		<div id="header_left">Gildas DELEPINE</div>
+       		<div id="header_center">Moteur de recherche multmédia</div>
 		</div>
 		
         <div id="menu">
         <ul>
           <li><a href="index.html" class="active">Accueil</a></li>
           <li><a href="#">Rechercher</a></li>
-          <li><a href="#">Administration</a></li>
+          <li><a href="admin.php">Administration</a></li>
           <!--<li><a href="liens.html">Liens</a></li>
           <li><a href="contact.html">Contact</a></li>-->
         </ul>
@@ -69,6 +69,7 @@
 			<a href="http://jigsaw.w3.org/css-validator/check/referer"><img style="border:0;width:88px;height:31px" src="http://jigsaw.w3.org/css-validator/images/vcss-blue" alt="CSS Valide !"/></a>
 		</div>
     </div>
-    <!-- end footer --></body>
+    <!-- end footer -->
+</body>
 
 </html>
